--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./erronka2html/index.css">
     <link rel="stylesheet" href="./erronka2html/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="./erronka2Html/IMG\ball.png">
+    <link rel="icon" type="image/x-icon" href="./erronka2Html/IMG/ball.png">
     <title>HOME</title>
 </head>
 
 <body>
     <header>
         <!-- 	<h1 class="logo">Birdie</h1> -->
-        <img src="./erronka2Html/IMG\logo.png" class="logo">
+        <img src="./erronka2Html/IMG/logo.png" class="logo">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
         <nav>
@@ -48,19 +48,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="./erronka2html/IMG\slide1.jpg" style="width:100%">
+                <img src="./erronka2html/IMG/slide1.jpg" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="./erronka2html/IMG\slide2.jpg" style="width:100%">
+                <img src="./erronka2html/IMG/slide2.jpg" style="width:100%">
                 <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="./erronka2html/IMG\slide3.jpg" style="width:100%">
+                <img src="./erronka2html/IMG/slide3.jpg" style="width:100%">
                 <div class="text">Caption Three</div>
             </div>
 
@@ -86,21 +86,21 @@
 
         <div class="newsIndex">
             <div class="card">
-                <img src="./erronka2html/IMG\new1.jpg" alt="Avatar" style="width:100%">
+                <img src="./erronka2html/IMG/new1.jpg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>GRAND SLAM - OPEN AUSTRALIA</b></h4>
                     <p>Resultados españoles</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./erronka2html/IMG\new2.jpeg" alt="Avatar" style="width:100%">
+                <img src="./erronka2html/IMG/new2.jpeg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>GRAND SLAM - OPEN AUSTRALIA</b></h4>
                     <p>Nadal se despide del Open de Australia</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./erronka2html/IMG\new3.jpeg" alt="Avatar" style="width:100%">
+                <img src="./erronka2html/IMG/new3.jpeg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>INTERNACIONAL MASCULINO </b></h4>
                     <p>Tenerife acoge esta semana el primer ATP</p>
@@ -157,7 +157,7 @@
 
         <div class="footer-left">
 
-            <img src="./erronka2html/IMG\logo.png">
+            <img src="./erronka2html/IMG/logo.png">
 
             <p class="footer-links">
                 <a href="./erronka2html/index.html" class="link-1">Home</a>
