--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./erronka2Html/albisteak.html">ALBISTEAK</a></li>
                 <li><a href="./erronka2html/egutegia.html">EGUTEGIA</a></li>
-                <li><a href="./erronka2html/galeria\galeria.html">GALERIA</a></li>
+                <li><a href="./erronka2html/galeria/galeria.html">GALERIA</a></li>
                 <li><a href="./erronka2html/denda.html">DENDA</a></li>
             </ul>
         </nav>
