--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </ul>
             <ul>
-                <li><a href="./index.Html">HOME</a></li>
+                <li><a href="#">HOME</a></li>
                 <li><a href="./erronka2Html/albisteak.html">ALBISTEAK</a></li>
                 <li><a href="./erronka2Html/egutegia.html">EGUTEGIA</a></li>
                 <li><a href="./erronka2Html/galeria/galeria.html">GALERIA</a></li>
