--- a/erronka2Html/albisteak.html
+++ b/erronka2Html/albisteak.html
@@ -47,7 +47,7 @@
     <div class="indexContainer">
         <div class="newsIndex">
             <div class="card">
-                <img src="img/albiste1.jpg" alt="">
+                <img src="IMG/albiste1.jpg" alt="">
                 <div class="container">
                     <h4>Nadal bere hoberen maila berreskuratzen du Australia-ko "open"-ean</h4>
                     <p>Mallorca-ko jokalariak semifinaletara aurreratzen da, eta frogatzen du bere maila oraindik
@@ -57,7 +57,7 @@
             </div>
 
             <div class="card">
-                <img src="img/albiste2.jpg" alt="">
+                <img src="IMG/albiste2.jpg" alt="">
                 <div class="container">
                     <h4>Australiako "open"-a. Klasifikazio taulari begirada bat eman</h4>
                     <p>Ikusi eliminatoria bakoitzeko jokalariak eta zeinek pasa duten hurrengo fasera. Ere partida
@@ -67,7 +67,7 @@
             </div>
 
             <div class="card">
-                <img src="img/albiste3.jpg" alt="">
+                <img src="IMG/albiste3.jpg" alt="">
                 <div class="container">
                     <h4>Jokalari hoberen zirraragarrizko datuak ikusi</h4>
                     <p>Begirada bat eman jokalari hoberen datu izugarriei. Zer da Nadal-en puntu gogorrena? Zein da
@@ -77,7 +77,7 @@
         </div>
         <div class="newsIndex">
             <div class="card">
-                <img src="img/albiste4.jpg" alt="">
+                <img src="IMG/albiste4.jpg" alt="">
                 <div class="container">
                     <h4>Federer bere azken partidua jokatuko du finalean</h4>
                     <p>Suitzeko jokalariak azken partida jokatuko du hurrengo asteburuan, eta irabazten badu, bere
@@ -86,7 +86,7 @@
             </div>
 
             <div class="card">
-                <img src="img/albiste5.jpg" alt="">
+                <img src="IMG/albiste5.jpg" alt="">
                 <div class="container">
                     <h4>Serena Williams emakumezko finalera ailegatzen du</h4>
                     <p>Jokalari amerikarrak semifinalak gainditzen ditu eta "open"-eko tituluari begira, itxaroten dago
@@ -95,7 +95,7 @@
             </div>
 
             <div class="card">
-                <img src="img/albiste6.jpg" alt="">
+                <img src="IMG/albiste6.jpg" alt="">
                 <div class="container">
                     <h4>Nicolas Saich hankazko lesio serioa izan ahal du laurdenak eta gero</h4>
                     <p>Nicolas Saich galdu izan behar du laurdenetako partida, bere hankaren lesioaren ondorioz.
