--- a/AO.html
+++ b/AO.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./argazkiak.css">
+    <link rel="stylesheet" href="./css/argazkiak.css">
+    <link rel="icon" type="image/x-icon" href="./img/ball.png">
     <title>Australia Open</title>
 </head>
 
@@ -19,32 +20,32 @@
         <hr>
         <main>
                 <div class="item-a">
-                    <img src="./media/img/auso/220px-2013_Australian_Open_-_Guillaume_Rufin.jpg">
+                    <img src="./img/auso/220px-2013_Australian_Open_-_Guillaume_Rufin.jpg">
                 </div>
                 <div class="div-2">
-                    <img src="./media/img/auso/australianopen_tournimage.jpg">
+                    <img src="./img/auso/australianopen_tournimage.jpg">
                 </div>
                 <div class="item-b">
-                    <img src="./media/img/auso/Australian-Open-011422.jpg">
+                    <img src="./img/auso/Australian-Open-011422.jpg">
                 </div>
                 <div class="div-4">
-                    <img src="./media/img/auso/AP23017069692841-758x506.jpg">
+                    <img src="./img/auso/AP23017069692841-758x506.jpg">
                 </div>
                 <div class="item-c">
-                    <img src="./media/img/auso/3528876-71924688-2560-1440.jpg">
+                    <img src="./img/auso/3528876-71924688-2560-1440.jpg">
                 </div>
                 <div class="div-6">
-                    <img src="./media/img/auso/3528407-71915308-2560-1440.jpg">
+                    <img src="./img/auso/3528407-71915308-2560-1440.jpg">
                 </div>
                 <div class="item-e">
-                    <img src="./media/img/auso/entry-list-australian-open-2021.jpg">
+                    <img src="./img/auso/entry-list-australian-open-2021.jpg">
                 </div>
                 <div class="item-d">
-                    <img src="./media/img/auso/5dcd927ac165e6a0cfcb935587811d77.jpg">
+                    <img src="./img/auso/5dcd927ac165e6a0cfcb935587811d77.jpg">
             </div>
             
         </main>
-        <a href=""><img id="atera-img" src="/media/img/Diseño sin título.png" alt=""></a>
+        <a href=""><img id="atera-img" src="./img/general/Diseño sin título.png" alt=""></a>
     </section>
 </body>
 
