--- a/US.html
+++ b/US.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./argazkiak.css">
+    <link rel="stylesheet" href="css/argazkiak.css">
+    <link rel="icon" type="image/x-icon" href="img/ball.png">
+
     <title>U.S. Open</title>
 </head>
 
@@ -17,31 +19,31 @@
         <hr>
         <main>
             <div class="item-a">
-                <img src="./media/img/USTA/1.webp">
+                <img src="img/USTA/1.webp">
             </div>
             <div class="div-2">
-                <img src="./media/img/USTA/2.jpg">
+                <img src="img/USTA/2.jpg">
             </div>
             <div class="item-b">
-                <img src="./media/img/USTA/3.jpg">
+                <img src="img/USTA/3.jpg">
             </div>
             <div class="div-4">
-                <img src="./media/img/USTA/4.jpg">
+                <img src="img/USTA/4.jpg">
             </div>
             <div class="item-c">
-                <img src="./media/img/USTA/5.jpg">
+                <img src="img/USTA/5.jpg">
             </div>
             <div class="div-6">
-                <img src="./media/img/USTA/US_OPEN_2022..jpg">
+                <img src="img/USTA/US_OPEN_2022..jpg">
             </div>
             <div class="item-e">
-                <img src="./media/img/USTA/a.jpeg">
+                <img src="img/USTA/a.jpeg">
             </div>
             <div class="item-d">
-                <img src="./media/img/USTA/8.jpg">
+                <img src="img/USTA/8.jpg">
             </div>
         </main>
-        <a href=""><img id="atera-img" src="/media/img/Diseño sin título.png" alt=""></a>
+        <a href=""><img id="atera-img" src="img/general/Diseño sin título.png" alt=""></a>
     </section>
 </body>
 
