--- a/Wimbledon.html
+++ b/Wimbledon.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./argazkiak.css">
+    <link rel="stylesheet" href="css/argazkiak.css">
+    <link rel="icon" type="image/x-icon" href="img/ball.png">
     <title>U.S. Open</title>
 </head>
 
@@ -18,31 +19,31 @@
         <hr>
         <main>
             <div class="item-a">
-                <img src="./media/img/Wimbledon/1.jpg">
+                <img src="img/Wimbledon/1.jpg">
             </div>
             <div class="div-2">
-                <img src="./media/img/Wimbledon/2.jpg">
+                <img src="img/Wimbledon/2.jpg">
             </div>
             <div class="item-b">
-                <img src="./media/img/Wimbledon/3.jpg">
+                <img src="img/Wimbledon/3.jpg">
             </div>
             <div class="div-4">
-                <img src="./media/img/Wimbledon/4.jpg">
+                <img src="img/Wimbledon/4.jpg">
             </div>
             <div class="item-c">
-                <img src="./media/img/Wimbledon/GettyImages-1405027480.webp">
+                <img src="img/Wimbledon/GettyImages-1405027480.webp">
             </div>
             <div class="div-6">
-                <img src="./media/img/Wimbledon/6.jpg">
+                <img src="img/Wimbledon/6.jpg">
             </div>
             <div class="item-e">
-                <img src="./media/img/Wimbledon/badosa-wb-990x557.jpg">
+                <img src="img/Wimbledon/badosa-wb-990x557.jpg">
             </div>
             <div class="item-d">
-                <img src="./media/img/Wimbledon/8.jpg">
+                <img src="img/Wimbledon/8.jpg">
             </div>
         </main>
-        <a href=""><img id="atera-img" src="/media/img/Diseño sin título.png" alt=""></a>
+        <a href=""><img id="atera-img" src="img/general/Diseño sin título.png" alt=""></a>
     </section>
 </body>
 </html>
