--- a/denda.html
+++ b/denda.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="denda.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/denda.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="IMG\ball.png">
+    <link rel="icon" type="image/x-icon" href="/img/ball.png">
     <title>Denda</title>
 </head>
 
 <body>
     <header>
         <!-- 	<h1 class="logo">Birdie</h1> -->
-        <img src="IMG\logo.png" class="logo">
+        <img src="/img/logo.png" class="logo">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
         <nav>
@@ -26,11 +26,11 @@
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </ul>
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="albisteak.html">ALBISTEAK</a></li>
-                <li><a href="egutegia.html">EGUTEGIA</a></li>
-                <li><a href="galeria\galeria.html">GALERIA</a></li>
-                <li><a href="denda.html">DENDA</a></li>
+                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/albisteak.html">ALBISTEAK</a></li>
+                <li><a href="/egutegia.html">EGUTEGIA</a></li>
+                <li><a href="/galeria.html">GALERIA</a></li>
+                <li><a href="/denda.html">DENDA</a></li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
@@ -39,7 +39,7 @@
      
     </header>
     <nav class="registrer">
-        <a href="log.html">Login/Registrer</a>
+        <a href="/log.html">Login/Registrer</a>
     </nav>
     <section class="dendaSection">
         
@@ -147,20 +147,20 @@
 
         <div class="footer-left">
 
-            <img src="IMG\logo.png">
+            <img src="/img/logo.png">
 
             <p class="footer-links">
-                <a href="index.html" class="link-1">Home</a>
+                <a href="/index.html" class="link-1">Home</a>
 
-                <a href="albisteak.html">Albisteak</a>
+                <a href="/albisteak.html">Albisteak</a>
 
-                <a href="denda.html">Denda</a>
+                <a href="/denda.html">Denda</a>
 
-                <a href="egutegia.html">Egutegia</a>
+                <a href="/egutegia.html">Egutegia</a>
 
-                <a href="galeria\galeria.html">Galeria</a>
+                <a href="/galeria.html">Galeria</a>
 
-                <a href="log.html">Sign-in</a>
+                <a href="/log.html">Sign-in</a>
             </p>
             <p class="footer-company-name">tenisfederazioa © 2023</p>
         </div>
