--- a/Jokalariak.html
+++ b/Jokalariak.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./jokalariak-styles.css">
+    <link rel="stylesheet" href="css/jokalariak-styles.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="IMG\ball.png">
+    <link rel="icon" type="image/x-icon" href="img/ball.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
@@ -24,33 +24,33 @@
         <div class="tz-gallery">
             <div class="row">
                 <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="./media/img/0_GettyImages-1242969532.jpg">
-                        <img src="./media/img/0_GettyImages-1242969532.jpg" alt="Bridge">
+                    <a class="lightbox" href="img/general/0_GettyImages-1242969532.jpg">
+                        <img src="img/general/0_GettyImages-1242969532.jpg" alt="Bridge">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="./media/img/https___s3-newsifier.webp">
-                        <img src="./media/img/https___s3-newsifier.webp" alt="Park">
+                    <a class="lightbox" href="img/general/https___s3-newsifier.webp">
+                        <img src="img/general/https___s3-newsifier.webp" alt="Park">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="./media/img/f.elconfidencial.com_original_27f_716_c3d_27f716c3d9cbbc4cddfd8e82489e7d0c.jpg">
-                        <img src="./media/img/f.elconfidencial.com_original_27f_716_c3d_27f716c3d9cbbc4cddfd8e82489e7d0c.jpg" alt="Tunnel">
+                    <a class="lightbox" href="img/general/f.elconfidencial.com_original_27f_716_c3d_27f716c3d9cbbc4cddfd8e82489e7d0c.jpg">
+                        <img src="img/general/f.elconfidencial.com_original_27f_716_c3d_27f716c3d9cbbc4cddfd8e82489e7d0c.jpg" alt="Tunnel">
                     </a>
                 </div>
                 <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="./media/img/roger-federer.jpeg">
-                        <img src="./media/img/roger-federer.jpeg" alt="Traffic">
+                    <a class="lightbox" href="img/general/roger-federer.jpeg">
+                        <img src="img/general/roger-federer.jpeg" alt="Traffic">
                     </a>
                 </div>
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="./media/img/63b1bb0e24a83.jpeg">
-                        <img src="./media/img/63b1bb0e24a83.jpeg" alt="Coast">
+                    <a class="lightbox" href="img/general/63b1bb0e24a83.jpeg">
+                        <img src="img/general/63b1bb0e24a83.jpeg" alt="Coast">
                     </a>
                 </div> 
                 <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="./media/img/kjfksdf.jpg">
-                        <img src="./media/img/kjfksdf.jpg" alt="Rails">
+                    <a class="lightbox" href="img/general/kjfksdf.jpg">
+                        <img src="img/general/kjfksdf.jpg" alt="Rails">
                     </a>
                 </div>
             </div>
