--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./erronka2Html/index.css">
-    <link rel="stylesheet" href="./erronka2Html/footer.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="./erronka2Html/IMG/ball.png">
+    <link rel="icon" type="image/x-icon" href="img/ball.png">
     <title>HOME</title>
 </head>
 
 <body>
     <header>
         <!-- 	<h1 class="logo">Birdie</h1> -->
-        <img src="./erronka2Html/IMG/logo.png" class="logo">
+        <img src="img/logo.png" class="logo">
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
         <nav>
@@ -26,17 +26,17 @@
             </ul>
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="./erronka2Html/albisteak.html">ALBISTEAK</a></li>
-                <li><a href="./erronka2Html/egutegia.html">EGUTEGIA</a></li>
-                <li><a href="./erronka2Html/galeria/galeria.html">GALERIA</a></li>
-                <li><a href="./erronka2Html/denda.html">DENDA</a></li>
+                <li><a href="albisteak.html">ALBISTEAK</a></li>
+                <li><a href="egutegia.html">EGUTEGIA</a></li>
+                <li><a href="galeria.html">GALERIA</a></li>
+                <li><a href="denda.html">DENDA</a></li>
             </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
             <span></span>
         </label>
         <nav class="registrer">
-            <a href="./erronka2Html/log.html">Login/Registrer</a>
+            <a href="log.html">Login/Registrer</a>
         </nav>
     </header>
     <nav class="registrer">
@@ -48,20 +48,20 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="./erronka2Html/IMG/slide1.jpg" style="width:100%">
-                <div class="text">Caption Text</div>
+                <img src="img/slide1.jpg" style="width:100%">
+                <div class="text"></div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="./erronka2Html/IMG/slide2.jpg" style="width:100%">
-                <div class="text">Caption Two</div>
+                <img src="img/slide2.jpg" style="width:100%">
+                <div class="text"></div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="./erronka2Html/IMG/slide3.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
+                <img src="img/slide3.jpg" style="width:100%">
+                <div class="text"></div>
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -86,21 +86,21 @@
 
         <div class="newsIndex">
             <div class="card">
-                <img src="./erronka2Html/IMG/new1.jpg" alt="Avatar" style="width:100%">
+                <img src="img/new1.jpg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>GRAND SLAM - OPEN AUSTRALIA</b></h4>
                     <p>Resultados españoles</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./erronka2Html/IMG/new2.jpeg" alt="Avatar" style="width:100%">
+                <img src="img/new2.jpeg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>GRAND SLAM - OPEN AUSTRALIA</b></h4>
                     <p>Nadal se despide del Open de Australia</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./erronka2Html/IMG/new3.jpeg" alt="Avatar" style="width:100%">
+                <img src="img/new3.jpeg" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>INTERNACIONAL MASCULINO </b></h4>
                     <p>Tenerife acoge esta semana el primer ATP</p>
@@ -116,7 +116,7 @@
 
             <p>Denboraldian liga berreskuratu zuten eta ordutik aurrera liga hazten joan zen inolako traba, eragozpen
                 edo etenik gabe.</p>
-            <img src="./erronka2Html/IMG/oldtenis.jpg" style="width:100%; padding: 1em;">
+            <img src="img/oldtenis.jpg" style="width:100%; padding: 1em;">
             <p>1945. urtean Bizkaiko Federazioak bere lehenengo Txapelketa1 Probintziala antolatu zuenerako, Espainian
                 bederatzi Txapelketa Nazional jokatuak ziren (Madrildarren eta Katalanen artean bereziki). Francisco
                 Manrique de Lara jauna, Madrildik etorria, Bilboko Irakaskuntza Institutu batera lan egitera etorri zen.
@@ -138,7 +138,7 @@
             <h2>Where?</h2>
             <p>«Celebro poder comunicarle que, después de laboriosas gestiones, he llegado a un acuerdo con los...</p>
             <div class="rigthImg">
-                <img src="./erronka2Html/IMG/Image.png">
+                <img src="img/Image.png">
             </div>
             <h2>Who?</h2>
             <p>Gutun honen bidez, Bizkaiko Saskibaloi Federazioa sortu zelaren berri eman zion Manrique de Larak Jesús
@@ -157,20 +157,20 @@
 
         <div class="footer-left">
 
-            <img src="./erronka2Html/IMG/logo.png">
+            <img src="img/logo.png">
 
             <p class="footer-links">
-                <a href="./erronka2Html/index.html" class="link-1">Home</a>
+                <a href="index.html" class="link-1">Home</a>
 
-                <a href="./erronka2Html/albisteak.html">Albisteak</a>
+                <a href="albisteak.html">Albisteak</a>
 
-                <a href="./erronka2Html/denda.html">Denda</a>
+                <a href="denda.html">Denda</a>
 
-                <a href="./erronka2Html/egutegia.html">Egutegia</a>
+                <a href="egutegia.html">Egutegia</a>
 
-                <a href="./erronka2Html/galeria\galeria.html">Galeria</a>
+                <a href="galeria.html">Galeria</a>
 
-                <a href="./erronka2Html/log.html">Sign-in</a>
+                <a href="log.html">Sign-in</a>
             </p>
             <p class="footer-company-name">tenisfederazioa © 2023</p>
         </div>
